[package]
edition      = "2021"
name         = "b-intime-5"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "b-intime-5"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32c6", "unstable"] }
esp-backtrace = { version = "0.17", features = ["esp32c6", "exception-handler", "panic-handler", "println"] }

static_cell = "2.0.0" # Used for static buffer allocation in a no_std environment
heapless = "0.9.1" # Used for small string/vec allocation

critical-section = "1.2.0"
embedded-io = "0.6.1"
esp-alloc = "0.8.0"
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-tcp",
  "socket-udp",
] }
esp-println = { version = "0.15.0", features = ["esp32c6", "log-04"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
