[package]
edition      = "2021"
name         = "b-intime-5"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "b-intime-5"
path = "./src/bin/main.rs"

[dependencies]
esp-backtrace = { version = "0.17.0", features = [ "esp32c6", "exception-handler", "panic-handler", "println" ] }
esp-hal = { version = "1.0.0-rc.0", features = [ "esp32c6", "unstable" ] }
esp-println = { version = "0.15.0", features = ["esp32c6", "log-04"] }
log = { version = "0.4.28" }
esp-wifi = { version = "0.15.0", features = [ "esp32c6", "coex", "builtin-scheduler", "esp-alloc" ] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c6"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-65536"] }
embassy-net = { version = "0.7.1", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4", "dns"] }
embassy-time = { version = "0.5.0" }
esp-storage = { version = "0.7.0", features = ["esp32c6"] }
embedded-storage = "0.3.1"
esp-hal-wifimanager = { version = "0.1.2", default-features = false, features = ["esp32c6", "ap"] }
static_cell = { version = "2.1.1", features = ["nightly"] }
heapless = { version = "0.8.0", default-features = false }
esp-alloc = "0.8.0"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6", "log-04"] }
jiff = { version = "0.2.10", default-features = false, features = ["static"] }
sntpc = { version = "0.6.0", default-features = false, features = [
    "embassy-socket",
] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
